--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: no-repeat top/100% url("images/bg-header-desktop.png");
+  background: no-repeat top/100% url("../images/bg-header-desktop.png");
   color: #9fabb2;
   font-family: 'Bai Jamjuree', sans-serif;
   font-size: .9rem;
